swagger.json fixed, works in online demo
