# swagger_docs/swagger.json
@@ -3,118 +3,121 @@
 
 //From Schema in Swagger Spec
 {
-	"swagger": "2.0",
-	"info":{
-			"title": "Account History for PHR/DRE",
-			"description": "Manages events in a user's account history",
-			//"termsOfService"
-			//"contact"
-			//"license"
-			"version": "0.1"
-	},
-	"host": "localhost:3005",
-	//"basepath"
-	"consumes": ["application/json"],
-	"produces": ["application/json"],
-	"schemes": [
-	 "http"
-	 ],
-	"paths":{
-		"/accountEvent": {
-			"get": {
-				"summary": "Add an event to a user's account history",
-				"description": "Save event for register, log in/out, up/download file, lab results, password change, personal information changed",
-				"operationID": "addEvent",
-				"parameters": [
-					{
-						"name": "userID",
-						"in": "query",
-						"description": "user identifier",
-						"required": true
-					},
-					{
-						"name": "event_type",
-						"in": "query",
-						"description": "user identifier",
-						"required": true
-					},
-					{
-						"name": "note",
-						"in": "query",
-						"description": "additional info for event",
-						"required": false
-					},
-					{
-						"name": "fileRef",
-						"in": "query",
-						"description": "file reference string",
-						"required": false
-					}
-				],
-				"responses": {
-					"200": {
-							"description":"OK"
-					},
-					"x-event initAccount added\n":{
-						"description": "Account initialized event added"
-					},
-					"x-event loggedIn added\n": {
-						"description": "User logged in"
-					},
-					"x-event loggedOut added\n": {
-						"description": "User logged out"
-					},
-					"x-event fileUploaded added\n": {
-						"description": "User uploaded a file"
-					},
-					"x-event fileDownloaded added\n": {
-						"description": "User downloaded a file"
-					},
-					"x-event labResults added\n": {
-						"description": "Lab results added to record"
-					},
-					"x-event passwordChange added\n": {
-						"description": "User changed password"
-					},
-					"x-event infoUpdate added\n": {
-						"description": "Personal information updated"
-					},
-				}
-			}
-		},
-		"/accountEvents": {
-			"get": {
-				"summary": "Returns all events in a user's account history",
-				"description": "Shows registered, logged in/out, file up/downloaded, lab results received, password changed, info updated",
-				"operationID":"allEventsInOrder",
-				"responses":
-
-			}
-		}
-	},
-
-
+    "swagger": "2.0",
+    "info": {
+        "version": "0.0.1",
+        "title": "Account History for PHR/DRE",
+        "description": "Manages events in a user's account history"
+    },
+    "host": "localhost:3005",
+    "basePath": "/accountEvents",
+    "schemes": [
+        "http"
+    ],
+    "consumes": [
+        "application/json"
+    ],
+    "produces": [
+        "application/json"
+    ],
+    "paths": {
+        "/add": {
+            "get": {
+                "summary": "Add an event to a user's account history",
+                "description": "Save event for register, log in/out, up/download file, lab results, password change, personal information changed",
+                "operationId": "addEvent",
+                "produces": [
+                    "text/plain"
+                ],
+                "parameters": [
+                    {
+                        "name": "userID",
+                        "in": "query",
+                        "type": "string",
+                        "description": "user identifier",
+                        "required": true
+                    },
+                    {
+                        "name": "event_type",
+                        "in": "query",
+                        "type": "string",
+                        "description": "user identifier",
+                        "required": true
+                    },
+                    {
+                        "name": "note",
+                        "in": "query",
+                        "type": "string",
+                        "description": "additional info for event",
+                        "required": false
+                    },
+                    {
+                        "name": "fileRef",
+                        "in": "query",
+                        "type": "string",
+                        "description": "file reference string",
+                        "required": false
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "event succesfully added",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/all": {
+            "get": {
+                "summary": "Returns all events in a user's account history",
+                "description": "Shows registered, logged in/out, file up/downloaded, lab results received, password changed, info updated",
+                "operationId": "allEventsInOrder",
+                "responses": {
+                    "200": {
+                        "description": "event history returned",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/eventSchema"
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "eventSchema": {
+            "required": [
+                "userID",
+                "event_type"
+            ],
+            "properties": {
+                "userID": {
+                    "type": "string"
+                },
+                "event_type": {
+                    "type": "string",
+                    "enum": [
+                        "initAccount",
+                        "loggedIn",
+                        "loggedOut",
+                        "fileUploaded",
+                        "fileDownloaded",
+                        "labResults",
+                        "passwordChange",
+                        "infoUpdate"
+                    ]
+                },
+                "note": {
+                    "type": "string"
+                },
+                "fileRef": {
+                    "type": "string"
+                }
+            }
+        }
+    }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
