# swagger_docs/swaggerModels.js
@@ -1,35 +1,38 @@
 //https://github.com/swagger-api/swagger-node-express/blob/master/sample-application/models.js
 
 //TODO: figure out which datatypes/models are needed + how to organize them
-exports.models = {
-	'Event': {
-		'id': 'Event',
-		'required':['id','name'],
-		'properties': {
-			'id': {
-				'type': 'integer',
-				'format': 'int64',
-				'description':'Event identifier', 
-				//minimum:
-				//maximum:	
-			},
-			'userID':{ //make a model for this too?
-				'login': 'string',
-				'uuid': 'string' //????
-			}
-			'name':{
-				'type': 'string',
-				'enum': ['initAccount', 'loggedIn', 'loggedOut','fileUploaded', 'fileDownloaded', 'labResults', 'passwordChange', 'infoUpdate'],
-				'description': 'full title' //from lookup table
-			},
-			'date': 'Date', //look at Swagger docs
-			'file':{
-				'$ref': 'File',
-				'description': 'description of the file'
-			}
-		}
-	},
-	'File':{
-
-	}
+//Deprecated: Swagger 2.0 keeps it all in one file, see "definitions" field
+exports.eventSchema = {
+	"eventSchema": {
+        "required": [
+            "userID",
+            "event_type"
+        ],
+        "properties": {
+            "userID": {
+                "type": "string"
+            },
+            "event_type": {
+                "type": "string",
+                "enum": [
+                    "initAccount",
+                    "loggedIn",
+                    "loggedOut",
+                    "fileUploaded",
+                    "fileDownloaded",
+                    "labResults",
+                    "passwordChange",
+                    "infoUpdate"
+                ]
+            },
+            "note": {
+                "type": "string"
+            },
+            "fileRef": {
+                "type": "string"
+            }
+        }
+    }
 }
+
+	
